--- a/ZZZDmgCalculator/wwwroot/index.html
+++ b/ZZZDmgCalculator/wwwroot/index.html
@@ -31,6 +31,10 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script>
+	    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
