--- a/ZZZDmgCalculator/wwwroot/index.html
+++ b/ZZZDmgCalculator/wwwroot/index.html
@@ -34,7 +34,7 @@
     <script>
 	    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
-    <script defer src="/nows/vscript.js"></script>
+    <script defer src="/js/vscript.js"></script>
 </body>
 
 </html>
